src/core-crm/objects/Contact/fields/Persona_Type__c.field-meta.xml
<CustomField>
    <fullName>Persona_Type__c</fullName>
    <description>The Personal Persona is the Primary Contact Record and others are child contacts</description>
    <label>Persona Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>QUT Learner</fullName>
            </value>
            <value>
                <fullName>QUT Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>