src/core-crm/objects/Contact/fields/Personal_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Personal_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lookup to the Contact’s Personal Assistant Contact record.</description>
    <label>Personal Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Personal Assistant)</relationshipLabel>
    <relationshipName>Contacts_Personal_Assistant</relationshipName>
    <type>Lookup</type>
</CustomField>