src/core-crm/objects/Contact/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Personal Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>