src/core-crm/objects/Contact/fields/Personal_Illness_Disability_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Personal_Illness_Disability_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recent application by Contact has flagged Personal Illness Disability applicant.</description>
    <label>Personal Illness Disability Applicant</label>
    <type>Checkbox</type>
</CustomField>