src/core-crm/objects/Contact/fields/Phone_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Phone_No_Locale__c</fullName>
    <description>Captures Phone with no Locale</description>
    <label>Phone (No Locale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>