src/core-crm/objects/Contact/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Job Title</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>