src/core-crm/objects/Contact/fields/Preferred_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Given_Name__c</fullName>
    <description>This field holds the user&apos;s preferred given name.</description>
    <externalId>true</externalId>
    <label>Preferred Given Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>