src/core-crm/objects/Contact/fields/Primary_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Primary_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>