src/core-crm/objects/Contact/fields/QLD_School_Name__c.field-meta.xml
<CustomField>
    <fullName>QLD_School_Name__c</fullName>
    <description>Name of the Queensland High school the applicant studied if they studied in Queensland.</description>
    <label>QLD School Name</label>
    <length>160</length>
    <type>Text</type>
</CustomField>