src/core-crm/objects/Contact/fields/QUT_Alumnus__c.field-meta.xml
<CustomField>
    <fullName>QUT_Alumnus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>&apos;Alumnus&apos; describes a person who is a former student of the institution.</inlineHelpText>
    <label>QUT Alumnus</label>
    <type>Checkbox</type>
</CustomField>