src/core-crm/objects/Contact/fields/QUT_Applicant__c.field-meta.xml
<CustomField>
    <fullName>QUT_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicant’ identifies a person who has submitted an application for admission to the institution.</inlineHelpText>
    <label>QUT Applicant</label>
    <type>Checkbox</type>
</CustomField>