src/core-crm/objects/Contact/fields/QUT_Approved_Disability__c.field-meta.xml
<CustomField>
    <fullName>QUT_Approved_Disability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The student’s QUT approved disability status</description>
    <label>QUT Approved Disability</label>
    <type>Checkbox</type>
</CustomField>