src/core-crm/objects/Contact/fields/QUT_Donor__c.field-meta.xml
<CustomField>
    <fullName>QUT_Donor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>‘Benefactor’ identifies a person who donates or bequeaths financial, material, service, or other gifts to the institution. Accepted alternative/s: Donor, Philanthropist.</inlineHelpText>
    <label>QUT Donor</label>
    <type>Checkbox</type>
</CustomField>