src/core-crm/objects/Contact/fields/QUT_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Employee_ID__c</fullName>
    <externalId>true</externalId>
    <label>QUT Employee ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>