src/core-crm/objects/Contact/fields/QUT_Identity_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Identity_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>QUT Identity ID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>