src/core-crm/objects/Contact/fields/QUT_Lead__c.field-meta.xml
<CustomField>
    <fullName>QUT_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A Lead is a someone that is known to QUT as having a potential study interest and/or has been identified as having a likelihood of applying.</inlineHelpText>
    <label>QUT Lead</label>
    <type>Checkbox</type>
</CustomField>