src/core-crm/objects/Contact/fields/QUT_Learner_Email__c.field-meta.xml
<CustomField>
    <fullName>QUT_Learner_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>This field captures the Official learner email sourced from SAMS and cannot be updated in DEP.</inlineHelpText>
    <label>QUT Learner Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>