src/core-crm/objects/Contact/fields/QUT_Partner__c.field-meta.xml
<CustomField>
    <fullName>QUT_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A partner is an organisation or individual external to QUT that has a relationship with one or more organisational areas of QUT excluding students and suppliers.</inlineHelpText>
    <label>QUT Partner</label>
    <type>Checkbox</type>
</CustomField>