src/core-crm/objects/Contact/fields/QUT_Staff__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Staff is defined as a person whose record appears in HR&apos;s employee, substantive, concurrent, HDA tables. Staff may be Employees and Non-Employees.</inlineHelpText>
    <label>QUT Staff</label>
    <type>Checkbox</type>
</CustomField>