src/core-crm/objects/Contact/fields/QUT_Staff_Email__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>QUT Staff Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>