src/core-crm/objects/Contact/fields/QUT_Staff_Username__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Username__c</fullName>
    <description>Username allocated to QUT Staff for system access</description>
    <externalId>true</externalId>
    <label>QUT Staff Username</label>
    <length>10</length>
    <type>Text</type>
</CustomField>