src/core-crm/objects/Contact/fields/QUT_Student__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A Student is a person registered to study a learning activity or academic offering the institution provides.</inlineHelpText>
    <label>QUT Student</label>
    <type>Checkbox</type>
</CustomField>