src/core-crm/objects/Contact/fields/QUT_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_ID__c</fullName>
    <externalId>true</externalId>
    <label>QUT Student ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>