src/core-crm/objects/Contact/fields/QUT_Student_Username__c.field-meta.xml
<CustomField>
    <fullName>QUT_Student_Username__c</fullName>
    <description>Username allocated to QUT Students for system access</description>
    <externalId>true</externalId>
    <label>QUT Student Username</label>
    <length>10</length>
    <type>Text</type>
</CustomField>