src/core-crm/objects/Contact/fields/Regional_Remote__c.field-meta.xml
<CustomField>
    <fullName>Regional_Remote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The student’s regional or remote status based on first known address and ASGS measure</description>
    <label>Regional / Remote</label>
    <type>Checkbox</type>
</CustomField>