src/core-crm/objects/Contact/fields/Registered_Email__c.field-meta.xml
<CustomField>
    <fullName>Registered_Email__c</fullName>
    <description>All automated email communications will be sent to this email address.</description>
    <label>Registered Email</label>
    <type>Email</type>
</CustomField>