src/core-crm/objects/Contact/fields/SAMS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>SAMS_Integration_Status__c</fullName>
    <label>SAMS Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>