src/core-crm/objects/Contact/fields/Staff_Email_Opt_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Staff_Email_Opt_Out_DateTime__c</fullName>
    <description>The date and time that the email was opted out</description>
    <label>Staff Email Opt Out DateTime</label>
    <type>DateTime</type>
</CustomField>