src/core-crm/objects/Contact/fields/Staff_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Staff_End_Date__c</fullName>
    <description>End dates employment roles with QUT</description>
    <label>Staff End Date</label>
    <type>Date</type>
</CustomField>