src/core-crm/objects/Contact/fields/Staff_Verified__c.field-meta.xml
<CustomField>
    <fullName>Staff_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to determine contact is verified as Staff (system automated or manually verified by program administrator)</description>
    <label>Staff Verified</label>
    <type>Checkbox</type>
</CustomField>