src/core-crm/objects/Contact/fields/Student_Success_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for Student Success to indicate that the student should not be contacted in the future</description>
    <label>Student Success Do Not Call</label>
    <type>Checkbox</type>
</CustomField>