src/core-crm/objects/Contact/fields/Total_Donations_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Donations_To_Date__c</fullName>
    <label>Total Donations To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>