src/core-crm/objects/Contact/fields/Total_Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Engagement_Score__c</fullName>
    <description>Sum of Engagement Scores for the all Engagement Opportunities the Contact has participated in.</description>
    <inlineHelpText>This field shows quantitative metric that rates  the engagement for Alumni and Corporate Partnership Engagement Activities</inlineHelpText>
    <label>Total Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>