src/core-crm/objects/Contact/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <description>The work email for this person</description>
    <externalId>true</externalId>
    <inlineHelpText>This field captures the work email of the contact.</inlineHelpText>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>