src/core-crm/objects/Contact/fields/Work_Phone_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_No_Locale__c</fullName>
    <description>Captures the Work Phone with no Locale</description>
    <label>Work Phone  (No Locale)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>