src/core-crm/objects/Contact/fields/Work_SMS_Opt_In_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Work_SMS_Opt_In_DateTime__c</fullName>
    <description>The date and time that the mobile opted in</description>
    <label>Work SMS Opt In DateTime</label>
    <type>DateTime</type>
</CustomField>