src/core-crm/objects/Contact/fields/Work_SMS_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Work_SMS_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing should not sms this mobile number</description>
    <label>Work SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>