src/core-crm/objects/Contact/fields/Work_SMS_Opt_Out_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Work_SMS_Opt_Out_DateTime__c</fullName>
    <description>The date and time that the mobile opted out</description>
    <label>Work SMS Opt Out DateTime</label>
    <type>DateTime</type>
</CustomField>