src/core-crm/objects/Contact/recordTypes/MC_Persona.recordType-meta.xml
<RecordType>
    <fullName>MC_Persona</fullName>
    <active>true</active>
    <description>This record type will be used for Child Contacts.  MC Integration user has access to this record type. Users and other Integration users will not have access to records with this type</description>
    <label>MC Persona</label>
</RecordType>