src/core-crm/objects/Contact/validationRules/Email_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_must_be_unique</fullName>
    <active>false</active>
    <description>Validates Email field if unique. Must not be the same with Staff Email, Student Email, or Work Email.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK(Email) ),
 OR(
  IF(Email = QUT_Staff_Email__c, true, false) ,
  IF(Email = QUT_Learner_Email__c, true, false) ,
  IF(Email = hed__WorkEmail__c, true, false) 
 )
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email must be unique.</errorMessage>
</ValidationRule>