src/core-crm/objects/Contact/validationRules/Lead_Source_Categ_Restrict_Edit_Existing.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Categ_Restrict_Edit_Existing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(PRIORVALUE(Lead_Source_Category__c)))),
 ISCHANGED(Lead_Source_Category__c ),
 RecordType.Name = &apos;Person&apos;
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Category__c</errorDisplayField>
    <errorMessage>Lead Source Category cannot be changed from it’s initial value.</errorMessage>
</ValidationRule>