src/core-crm/objects/Contact/validationRules/Lead_Source_Restrict_Edit_Existing.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Restrict_Edit_Existing</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK(TEXT(PRIORVALUE(LeadSource)))),
 ISCHANGED(LeadSource),
 RecordType.Name = &apos;Person&apos;
)</errorConditionFormula>
    <errorDisplayField>LeadSource</errorDisplayField>
    <errorMessage>Lead Source cannot be changed from it’s initial value</errorMessage>
</ValidationRule>