src/core-crm/objects/Contact/validationRules/Staff_Email_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Staff_Email_must_be_unique</fullName>
    <active>true</active>
    <description>Validates Staff Email field if unique. Must not be the same with Email, Student Email, or Work Email.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK(QUT_Staff_Email__c) ),
 OR(
  IF(QUT_Staff_Email__c = Email, true, false) ,
  IF(QUT_Staff_Email__c = QUT_Learner_Email__c, true, false) ,
  IF(QUT_Staff_Email__c = Work_Email__c, true, false) 
 )
)</errorConditionFormula>
    <errorDisplayField>QUT_Staff_Email__c</errorDisplayField>
    <errorMessage>Staff Email must be unique.</errorMessage>
</ValidationRule>