src/core-crm/objects/Contact/validationRules/Work_Email_must_be_unique.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Email_must_be_unique</fullName>
    <active>false</active>
    <description>Validates Work Email field if unique. Must not be the same with Email, Student Email, or Staff Email.</description>
    <errorConditionFormula>AND(
 NOT (ISBLANK(Work_Email__c) ),
 OR(
  IF(Work_Email__c= Email, true, false) ,
  IF(Work_Email__c= QUT_Learner_Email__c, true, false) ,
  IF(Work_Email__c= QUT_Staff_Email__c , true, false)
 )
)</errorConditionFormula>
    <errorDisplayField>Work_Email__c</errorDisplayField>
    <errorMessage>Work Email must be unique.</errorMessage>
</ValidationRule>